app/src/main/java/com/example/dudu/data/remote/errors/ServerError.kt
package com.example.dudu.data.remote.errors

class ServerError : Exception()